<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/amount"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/amountId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal">
    </EditText>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/num_of_pax"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/paxId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/svsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/no_svs"
            android:textOn="@string/svs">

        </ToggleButton>

        <ToggleButton
            android:id="@+id/GstButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/no_gst"
            android:textOn="@string/gst">

        </ToggleButton>
    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/discount"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/DiscountId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal">
    </EditText>

    <RadioGroup
        android:id="@+id/PaymentOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/cashOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash">
        </RadioButton>

        <RadioButton
            android:id="@+id/PaynowOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paynow">
        </RadioButton>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/SplitOption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split">
        </Button>

        <Button
            android:id="@+id/ResetOption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset">
        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/Display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:id="@+id/Display1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

</LinearLayout>